refactor: RelationalExpression codebase